Fix for scrollbar with infinite scrolling.

--- a/frontend/css/app.css
+++ b/frontend/css/app.css
@@ -216,11 +216,7 @@ button.sign-in:hover a { color: #fff; }
 }
 
 section {
-  bottom: 50px; /* Corresponds to the footer height */
-  position: absolute;
-  top: 90px; /* Corresponds to the header height plus 20px */
   width: 100%;
-  overflow-y: visible;
 }
 
 section div.legends {
@@ -290,12 +286,11 @@ section div.icons ul li span {
 }
 
 section div.wrapper {
-
+  top:90px;
+  bottom: 50px;
   margin-left: 2em;
   overflow: auto;
   padding: .343em;
-  /* position:absolute; - infinite scroll doesn't work with this */
-
   position: absolute;
 }
 
